--- a/parcel-server/src/main/webapp/WEB-INF/web.xml
+++ b/parcel-server/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,10 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>Parcel Server</display-name>
+	
+	<welcome-file-list>
+    	<welcome-file>/index.html</welcome-file>
+	</welcome-file-list>
 
 	<servlet>
 		<servlet-name>spring-mvc</servlet-name>
