--- a/parcel-server/pom.xml
+++ b/parcel-server/pom.xml
@@ -17,8 +17,14 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-
+	<repositories>
+		<repository>
+			<id>gcm-server-repository</id>
+			<url>https://github.com/slorber/gcm-server-repository/raw/master/releases/</url>
+		</repository>
+	</repositories>
 	<dependencies>
+
 
 		<!-- Spring web & mvc -->
 		<dependency>
@@ -45,6 +51,13 @@
 			<version>${jackson.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		
+		<!--  GCM-server -->
+		<dependency>
+            <groupId>com.google.android.gcm</groupId>
+            <artifactId>gcm-server</artifactId>
+            <version>1.0.2</version>
+        </dependency>
 
 	</dependencies>
 
